Added Thymeleaf support

--- a/springbootrestapiexample/pom.xml
+++ b/springbootrestapiexample/pom.xml
@@ -20,6 +20,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
@@ -49,6 +53,12 @@
             <artifactId>HikariCP</artifactId>
         </dependency>
 	
+ 		<!-- Webjar for bootstrap - necessary for the html style -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.2.1</version>
+        </dependency>
 
 	</dependencies>
 	<build>
