--- a/springbootrestapiexample/src/main/resources/application.properties
+++ b/springbootrestapiexample/src/main/resources/application.properties
@@ -19,3 +19,5 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 logging.level.=error
+
+spring.thymeleaf.cache=false
