Added SQLServer Support

--- a/springbootrestapiexample/pom.xml
+++ b/springbootrestapiexample/pom.xml
@@ -47,6 +47,11 @@
 			<version>12.2.0.1</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>7.0.0.jre8</version>
+		</dependency>
 		<!-- HikariCP connection pool -->
         <dependency>
             <groupId>com.zaxxer</groupId>
