--- a/springbootrestapiexample/src/main/resources/application.properties
+++ b/springbootrestapiexample/src/main/resources/application.properties
@@ -1,15 +1,19 @@
+server.port=8181
+
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username = exampledb
-spring.datasource.password = pwd123
-spring.datasource.driver-class-oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.username = exampledb
+#spring.datasource.password = pwd123
+#spring.datasource.driver-class-oracle.jdbc.driver.OracleDriver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
-
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+#SQLServer settings
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=sample
+spring.datasource.username = sa
+spring.datasource.password =
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
